# MibS

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  Dependencies  INSTALL  Makefile.am  Makefile.in  MibSBilevel.cpp  MibSBranchObjectInt.cpp  MibSBranchStrategyPseudo.cpp  MibSBranchStrategyStrong.cpp  MibSCutGenerator.cpp  MibSHeuristic.cpp  MibSMain.cpp  MibSModel.cpp  MibSParams.cpp  README  README.md  _config.yml  acinclude.m4  aclocal.m4  appveyor.yml  configure  configure.ac  doxygen.md  index.md  input.md  libtool  mibs.pc.in  millidocs.gemspec  parameters.md
.ci/: .travis.pre
.coin-or/: Dependencies  config.yml  generate_readme  projDesc.xml
.github/workflows/: linux-ci.yml  windows-ci.yml
Doxygen/1.2/: MibSBilevel_8hpp.html  MibSBilevel_8hpp__dep__incl.map  MibSBilevel_8hpp__dep__incl.md5  MibSBilevel_8hpp__incl.map  MibSBilevel_8hpp__incl.md5  MibSBilevel_8hpp_source.html  MibSBranchObjectInt_8hpp.html  MibSBranchObjectInt_8hpp__incl.map  MibSBranchObjectInt_8hpp__incl.md5  MibSBranchObjectInt_8hpp_source.html  MibSBranchStrategyMaxInf_8hpp.html  MibSBranchStrategyMaxInf_8hpp__incl.map  MibSBranchStrategyMaxInf_8hpp__incl.md5  MibSBranchStrategyMaxInf_8hpp_source.html  MibSBranchStrategyPseudo_8hpp.html  MibSBranchStrategyPseudo_8hpp__incl.map  MibSBranchStrategyPseudo_8hpp__incl.md5  MibSBranchStrategyPseudo_8hpp_source.html  MibSBranchStrategyRel_8hpp.html  MibSBranchStrategyRel_8hpp__incl.map  MibSBranchStrategyRel_8hpp__incl.md5  MibSBranchStrategyRel_8hpp_source.html  MibSBranchStrategyStrong_8hpp.html  MibSBranchStrategyStrong_8hpp__incl.map  MibSBranchStrategyStrong_8hpp__incl.md5  MibSBranchStrategyStrong_8hpp_source.html  MibSConfig_8hpp.html  MibSConfig_8hpp__incl.map  MibSConfig_8hpp__incl.md5  MibSConfig_8hpp_source.html  MibSConstants_8hpp.html  MibSConstants_8hpp__dep__incl.map  MibSConstants_8hpp__dep__incl.md5  MibSConstants_8hpp_source.html  MibSCutGenerator_8hpp.html  MibSCutGenerator_8hpp__incl.map  MibSCutGenerator_8hpp__incl.md5  MibSCutGenerator_8hpp_source.html  MibSHelp_8hpp.html  MibSHelp_8hpp__dep__incl.map  (+194 more)
Doxygen/1.2/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+43 more)
_sass/: variables.scss
_site/: 404.html  index.html  input.html  parameters.html
_site/assets/css/: docs.css  docs.css.map
_site/assets/js/: database.js
assets/css/: docs.scss  docs.scss~
assets/js/: prism.min.js
data/: informationAboutData.txt  listOfData.txt  moore90WithName.txt  moore90WithNameSection.txt
data/general/: moore90_2.txt
data/general/Random/: int0sum_i0_10.mps  int0sum_i0_160.mps  int0sum_i0_260.mps
data/general/ramdom/: int0sum_i0_110.mps  int0sum_i0_160.txt  int0sum_i0_210.mps  int0sum_i0_360.txt  int0sum_i0_60.mps
data/general/random/: int0sum_i0_10.aux  int0sum_i0_310.mps.aux  int0sum_i0_60.aux
data/interdiction/: F5010W01.KNP.mps  F5010W01.KNP.txt
data/interdiction/Assignment/: 2AP05-1.mps  2AP05-1.txt  2AP05-10.mps  2AP05-11.aux  2AP05-11.mps  2AP05-12.aux  2AP05-12.mps.aux  2AP05-13.mps  2AP05-13.txt  2AP05-14.mps.aux  2AP05-14.txt  2AP05-15.mps.aux  2AP05-15.txt  2AP05-16.mps.aux  2AP05-16.txt  2AP05-17.mps  2AP05-17.txt  2AP05-18.aux  2AP05-18.mps  2AP05-19.mps.aux  2AP05-19.txt  2AP05-2.mps  2AP05-2.txt  2AP05-20.mps  2AP05-20.txt  2AP05-21.aux  2AP05-21.mps  2AP05-22.mps.aux  2AP05-22.txt  2AP05-23.mps  2AP05-23.txt  2AP05-24.aux  2AP05-24.mps  2AP05-25.mps  2AP05-25.txt  2AP05-3.mps  2AP05-3.txt  2AP05-4.mps  2AP05-4.txt  2AP05-5.aux  (+9 more)
data/interdiction/Knapsack/: K5010W08.KNP.aux  K5010W09.KNP.aux  K5010W12.KNP.aux  K5010W15.KNP.aux  K5010W16.KNP.aux  K5010W18.KNP.aux  K5020W01.KNP.aux  K5020W04.KNP.aux  K5020W06.KNP.aux  K5020W08.KNP.aux  K5020W10.KNP.aux  K5020W13.KNP.aux  K5020W14.KNP.aux  K5020W16.KNP.aux  K5020W18.KNP.aux  K5020W19.KNP.aux  K5020W20.KNP.aux  K5030W01.KNP.aux  K5030W02.KNP.aux  K5030W03.KNP.aux  K5030W08.KNP.aux  (+23 more)
data/notInterdiction/: linderoth.mps  linderoth.txt  milp_10_20_50_2310.mps  milp_10_20_50_2310.txt  milp_4_20_10_0110.mps  milp_4_20_10_0110.txt  moore90.mps  moore90.txt  moore90_2.mps  moore90_2.txt
examples/: mibs.par.in
examples/instances/: knapsack.mps  linderoth.aux  linderoth.mps  milp_4_20_10_0110.aux  milp_4_20_10_0110.mps  moore90NameFormat.aux  moore90_2.mps  p0033.aux
include/: MibSBilevel.h  MibSBranchObjectInt.h  MibSBranchStrategyMaxInf.h  MibSBranchStrategyPseudo.h  MibSBranchStrategyRel.h  MibSBranchStrategyStrong.h  MibSConstants.h  MibSCutGenerator.h  MibSHeuristic.h  MibSModel.h  MibSObjectInt.h  MibSParams.h  MibSSolTypes.h  MibSSolution.h  MibSTreeNode.h
scripts/: README.md
scripts/analyze/: gather.sh  gatherHeuristic.sh  gathering  make_plots.py  mibs_batch.pbs  myrun.py  performance_plots.py  process.py  run.py  run.sh  run2020.sh  runandprocess.py  running  runparams.py  runparams_cuts.py
src/: #MibSCutGenerator.cpp#  Makefile  Makefile.am  Makefile.in  MibSBilevel.cpp  MibSBilevel.hpp  MibSBranchObjectInt.cpp  MibSBranchObjectInt.hpp  MibSBranchStrategyMaxInf.cpp  MibSBranchStrategyMaxInf.hpp  MibSBranchStrategyPseudo.cpp  MibSBranchStrategyPseudo.hpp  MibSBranchStrategyRel.cpp  MibSBranchStrategyRel.hpp  MibSBranchStrategyStrong.cpp  MibSBranchStrategyStrong.hpp  MibSConfig.hpp  MibSConstants.hpp  MibSCutGenerator.cpp  MibSCutGenerator.hpp  MibSHelp.hpp  MibSHelper.hpp  MibSHeuristic.cpp  MibSHeuristic.hpp  MibSMain.cpp  MibSModel.cpp  MibSModel.hpp  MibSObjectInt.cpp  MibSObjectInt.hpp  MibSParams.cpp  MibSParams.hpp  MibSSolTypes.hpp  MibSSolution.cpp  MibSSolution.hpp  MibSTreeNode.cpp  MibSTreeNode.hpp  config.h.in  config_default.h  config_mibs.h.in  config_mibs_default.h  (+12 more)
(+732 files in other folders)
